[java_ii] tp2 ex06, ex07