@@ -12,21 +12,24 @@ class ConsultationHistoryTest {
   @Test
   void shouldStoreAndRetrieveConsultations() {
     var history = new FakeConsultationHistory();
-    var patient = new Patient("John Doe", "123456");
+    var healthPlan = new StubHealthPlan(0.70);
+    var patient = new Patient("John Doe", "123456", healthPlan);
     var consultation = new Consultation(patient, 200.0, LocalDateTime.now());
 
     history.addConsultation(consultation);
     var consultations = history.getAllConsultations();
 
     assertEquals(1, consultations.size());
-    assertEquals(consultation, consultations.getFirst());
+    assertEquals(consultation, consultations.get(0));
   }
 
   @Test
   void shouldFilterConsultationsByPatient() {
     var history = new FakeConsultationHistory();
-    var patient1 = new Patient("John Doe", "123456");
-    var patient2 = new Patient("Jane Smith", "789012");
+    var healthPlan1 = new StubHealthPlan(0.70);
+    var healthPlan2 = new StubHealthPlan(0.80);
+    var patient1 = new Patient("John Doe", "123456", healthPlan1);
+    var patient2 = new Patient("Jane Smith", "789012", healthPlan2);
 
     var consultation1 = new Consultation(patient1, 200.0, LocalDateTime.now());
     var consultation2 = new Consultation(patient2, 150.0, LocalDateTime.now());
@@ -46,7 +49,8 @@ class ConsultationHistoryTest {
   @Test
   void shouldReturnEmptyListForPatientWithNoConsultations() {
     var history = new FakeConsultationHistory();
-    var patient = new Patient("John Doe", "123456");
+    var healthPlan = new StubHealthPlan(0.70);
+    var patient = new Patient("John Doe", "123456", healthPlan);
 
     var consultations = history.getConsultationsByPatient(patient);
 
